fixing the height for shift and staffing page (#2013)

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1425,6 +1425,17 @@ p {
   overflow: auto;
 }
 
+.staffing-table-content {
+  height: 600px;
+  overflow-y: scroll;
+}
+
+.shifts-table-content {
+  height: 500px;
+  overflow-y: scroll;
+}
+
+
 .staffing-controls {
   background-color: white;
   padding-top: 10px;
